--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -1,3 +1,5 @@
 <p class="text-red-500">home works!</p>
 
-<app-button>Click me</app-button>
+<app-button label="Primary Button" type="primary"></app-button>
+
+<app-button label="Secondary Button" type="secondary"></app-button>
