--- a/src/app/features/home/home.html
+++ b/src/app/features/home/home.html
@@ -49,8 +49,10 @@
     </div>
   </section>
 
-  <section class="py-10 px-4">
+  <!-- Four Nations Section -->
+  <section class="py-16 px-4 bg-white">
     <div class="container mx-auto">
+          <h3 class="text-3xl font-bold text-center text-gray-800 mb-12">Sirviendo a las cuatro naciones</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
         <app-card 
           title="Air Nation" 
@@ -89,7 +91,7 @@
               title="Experienced Bison" 
               description="Our flying bison are trained by the best Air Nomad masters and have years of experience" 
               [icon]="Star"
-              color="yellow"
+              color="oklch(79.5% 0.184 86.047)"
             />
             <app-card 
               title="Expert Caretakers" 
