--- a/src/app/shared/components/card/card.html
+++ b/src/app/shared/components/card/card.html
@@ -1,4 +1,4 @@
-<div class="rounded-md border shadow-sm p-4 flex flex-col items-center gap-2" [style.border-color]="color()">
+<div class="rounded-md border shadow-sm p-4 flex flex-col items-center justify-center gap-2 min-h-48" [style.border-color]="color()">
   <lucide-icon [img]="icon()" [style.color]="color()" class="h-8 w-8"/>
   <h3 class="text-xl font-semibold text-gray-800">{{ title() }}</h3>
   <p class="text-gray-600 text-center">{{ description() }}</p>
